fixed dialog causing body shift bug

--- a/css/main.css
+++ b/css/main.css
@@ -27,19 +27,28 @@
    Author's custom styles
    ========================================================================== */
 
+/*html {
+	overflow-y: scroll;
+}*/
+html, body
+{
+    height: 100%;
+}
+
 body {
 	background: #F6F7F8;
 	font-family: 'Open Sans', Arial, sans-serif;
 	font-size: 15px;
 	color: #7c7e80;
+	overflow: hidden !important;
 }
 
-body.ngdialog-open {
-	overflow: hidden;
-}
-
-body.ovh {
-  overflow:hidden;
+.whole-container {
+	overflow-y: scroll;
+	height: 100%;
+	max-height: 100%;
+	display: block;
+	position: relative;
 }
 
 h1 {
